--- a/config/llama3-8B/qlora_train_config.yaml
+++ b/config/llama3-8B/qlora_train_config.yaml
@@ -1,45 +1,50 @@
+# Config for single device LoRA finetuning in lora_finetune_single_device.py
+# using a Llama3 8B model
+#
 # This config assumes that you've run the following command before launching
 # this run:
-#   tune download mistralai/Mistral-7B-Instruct-v0.2 --output-dir model/mistral --hf-token <HF_TOKEN>
+#   tune download meta-llama/Meta-Llama-3-8B-Instruct --output-dir model/llama3 --hf-token <HF_TOKEN>
+#
 # To launch on a single device, run the following command from root:
-#   tune run lora_finetune_single_device --config config/mistral/qlora_train_config.yaml
+#   tune run lora_finetune_single_device --config config/llama3/qlora_train_config.yaml
 #
 # This config works only for training on single device.
 
 
 # Model Arguments
 model:
-  _component_: torchtune.models.mistral.qlora_mistral_7b
-  lora_attn_modules: ['q_proj', 'v_proj']
-  apply_lora_to_mlp: False
-  apply_lora_to_output: False
+  _component_: torchtune.models.llama3.qlora_llama3_8b
+  lora_attn_modules: ['q_proj', 'k_proj', 'v_proj', 'output_proj']
+  apply_lora_to_mlp: True
+  apply_lora_to_output: True
   lora_rank: 8
-  lora_alpha: 32
+  lora_alpha: 16
 
 # Tokenizer
 tokenizer:
-  _component_: torchtune.models.mistral.mistral_tokenizer
-  path: model/mistral/original/tokenizer.model
+  _component_: torchtune.models.llama3.llama3_tokenizer
+  path: model/llama3-8B/original/tokenizer.model
 
 checkpointer:
   _component_: torchtune.utils.FullModelMetaCheckpointer
-  checkpoint_dir: model/mistral/original/
+  checkpoint_dir: model/llama3-8B/original
   checkpoint_files: [
     consolidated.00.pth
   ]
-  output_dir: model/finetune_checkpoint
-  model_type: MISTRAL
+  # adapter_checkpoint: ../finetune_checkpoint_8B/adapter_0.pt
+  # recipe_checkpoint: ../finetune_checkpoint_8B/recipe_state.pt
+  output_dir: model/finetune_checkpoint_8B
+  model_type: LLAMA3
 resume_from_checkpoint: False
 
 # Dataset and Sampler
 dataset:
   _component_: torchtune.datasets.chat_dataset
   source: data/preprocessed
-  max_seq_len: 4096
+  max_seq_len: 2048
   conversation_style: sharegpt
   train_on_input: False
   split: train
-  chat_format: MistralChatFormat
   
 seed: 42
 shuffle: True
@@ -48,7 +53,8 @@ batch_size: 1
 # Optimizer and Scheduler
 optimizer:
   _component_: torch.optim.AdamW
-  lr: 1e-4
+  weight_decay: 0.01
+  lr: 3e-4
 lr_scheduler:
   _component_: torchtune.modules.get_cosine_schedule_with_warmup
   num_warmup_steps: 100
@@ -57,13 +63,13 @@ loss:
   _component_: torch.nn.CrossEntropyLoss
 
 # Training
-epochs: 1
+epochs: 10
 max_steps_per_epoch: null
-gradient_accumulation_steps: 1
+gradient_accumulation_steps: 4
 compile: False
 
 # Logging
-output_dir: /tmp/lora_finetune_output
+output_dir: /tmp/lora_finetune_output_8B
 metric_logger:
   _component_: torchtune.utils.metric_logging.DiskLogger
   log_dir: ${output_dir}
@@ -82,7 +88,7 @@ log_peak_memory_stats: False
 # Environment
 device: cuda
 dtype: bf16
-enable_activation_checkpointing: False
+enable_activation_checkpointing: True
 
 # Profiler (disabled)
 profiler:
